conversion de matriz de tipo string a matriz tipo int